align fix

--- a/movieStyle.css
+++ b/movieStyle.css
@@ -54,7 +54,10 @@ img {
 }
 
 p {
+  color: white;
+}
 
+p2 {
 text-align: left;
   color: white;
 }
